deploy/kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-helloworld
  namespace: default  
  labels:
    app: springboot-helloworld
spec:
  type: NodePort              #---通过NodePort方式暴露端口，方便外界访问
  ports:
    - name: server            #---服务端口名，用于访问监控 UI
      nodePort: 31311
      port: 8080             
      targetPort: 8080
    - name: management        #---指定监控端口名，表示此应用被 Springboot Admin 服务发现 
      nodePort: 31312
      port: 8081
      targetPort: 8081
  selector:
    app: springboot-helloworld
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-helloworld
  namespace: default
  labels:
    app: springboot-helloworld
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-helloworld
  template:
    metadata:
      labels:
        app: springboot-helloworld
    spec:
      containers:
      - name: springboot-helloworld
        image: hb.sparke.cn/k8s/springboot-helloworld:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
        resources: 
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - hello.sparke.cn
      secretName: sparke-certs
  rules:
    - host: hello.sparke.cn
      http:
        paths:
          - path: /
            backend:
              serviceName: springboot-helloworld
              servicePort: 8080
